--- a/index.html
+++ b/index.html
@@ -166,8 +166,10 @@
               <span class="bef-header" data-aos="zoom-in-up">Choose Excellence, Choose STEM Computer Science</span>
               <h2 data-aos="zoom-in-up">About US</h2>
               <p class="intro" data-aos="fade-up">
-               blah blah balh balh blah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balh
-blah blah balh balhblah blah balh 
+                Welcome to the <b>Computer Science Club of STEM High School, 6th of October! </b>We are a passionate community 
+                of students dedicated to exploring the exciting world of computer science and technology. 
+                At our club, we strive to foster a love for coding, innovation, and problem-solving, empowering our members 
+                to excel in this ever-evolving field.
               </p>
               <div class="container">
                 <div class="right">
@@ -175,18 +177,19 @@ blah blah balh balhblah blah balh
                     <div class="p_icon">
                       <iconify-icon icon="icon-park-twotone:setting-web"></iconify-icon>
                     </div>
-                    <p><span>blah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balh 
-blah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balh
-blah
+                    <p><span>Exciting Projects</span><br>Get ready to embark on thrilling coding projects that 
+                      challenge your problem-solving skills and ignite your imagination. From creating interactive websites to 
+                      developing mobile apps and exploring artificial intelligence, our club offers a wide range of projects designed 
+                      to keep you engaged and inspired.
                     </p>
                   </div>
                   <div class="p_right" data-aos="zoom-in-down">
                     <div class="p_icon">
                       <iconify-icon icon="mdi:sword-fight"></iconify-icon>
                     </div>
-                    <p><span>Cblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balh 
-blah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balhblah blah balh balh
-blah 
+                    <p><span>Competitions and Hackathons</span><br>Are you ready to put your skills to the test? Join us in various coding competitions 
+                      and hackathons, where you'll have the opportunity to showcase your talents, collaborate with teammates, and even 
+                      win prestigious awards. 
                     </p>
                   </div>
                   <div class="p_right" data-aos="zoom-in-down">
